cinnamon: GWL set fixed font size for window count badge
so that it isn't too big with user font scaling

--- a/src/Mint-L/cinnamon/cinnamon.css
+++ b/src/Mint-L/cinnamon/cinnamon.css
@@ -1351,6 +1351,7 @@ StScrollBar {
   padding-left: 4px; }
 
 .grouped-window-list-number-label {
+  font-size: 11px;
   z-index: 99;
   color: #d0d0d0; }
 
